Fix grid-gap

--- a/public/main.css
+++ b/public/main.css
@@ -7,7 +7,6 @@
   align-items: center;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  grid-gap: 10px;
   grid-template-areas: "dropzone dropzone" "input output"; }
   @media (min-width: 1024px) {
     .container {
