--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -5,7 +5,6 @@
   align-items: center;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  grid-gap: 10px;
   grid-template-areas:
     "dropzone dropzone"
     "input output";
